# nodedb

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.APACHE-2.0  README.md  SECURITY.md  deny.toml
.config/: nextest.toml
docs/: architecture.md  array.md  bitemporal.md  cli.md  getting-started.md  kv.md  protocols.md  query-language.md  real-time.md  timeseries.md  (+1 more)
nodedb-array/: Cargo.toml
nodedb-array/src/: error.rs  lib.rs  wal.rs
nodedb-array/src/codec/: column_codec.rs  coord_delta.rs  coord_rle.rs  limits.rs  mod.rs  tag.rs  tile_decode.rs  tile_encode.rs
nodedb-array/src/coord/: decode.rs  encode.rs  hilbert.rs  mod.rs  normalize.rs  string_hash.rs  zorder.rs
nodedb-array/src/query/: aggregate.rs  ceiling.rs  elementwise.rs  mod.rs  project.rs  rechunk.rs  retention.rs  slice.rs
nodedb-array/src/schema/: array_schema.rs  attr_spec.rs  builder.rs  cell_order.rs  dim_spec.rs  mod.rs
nodedb-array/src/schema/validation/: attrs.rs  dims.rs  mod.rs  tiles.rs
nodedb-array/src/segment/: encrypt.rs  mod.rs  reader.rs  writer.rs
nodedb-array/src/segment/format/: footer.rs  framing.rs  header.rs  mod.rs  tile_entry.rs
nodedb-array/src/segment/mbr_index/: build.rs  mod.rs  node.rs  predicate.rs  query.rs
nodedb-array/src/sync/: ack.rs  apply.rs  gc.rs  hlc.rs  mod.rs  op.rs  op_codec.rs  op_log.rs  replica_id.rs  schema_crdt.rs  snapshot.rs
nodedb-array/src/tile/: cell_payload.rs  dense_tile.rs  layout.rs  mbr.rs  mod.rs  promotion.rs  sparse_tile.rs
nodedb-array/src/types/: array_id.rs  domain.rs  mod.rs  tile_id.rs
nodedb-array/src/types/cell_value/: mod.rs  value.rs
nodedb-array/src/types/coord/: mod.rs  value.rs
nodedb-client/: Cargo.toml
nodedb-client/src/: capabilities.rs  lib.rs  remote.rs  remote_parse.rs  traits.rs
nodedb-client/src/native/: client.rs  mod.rs  pool.rs  response_parse.rs
nodedb-client/src/native/connection/: mod.rs  stream.rs  tls.rs
nodedb-columnar/: Cargo.toml
nodedb-columnar/src/: delete_bitmap.rs  encrypt.rs  error.rs  filter.rs  format.rs  lib.rs  memtable.rs  mutation.rs  pk_index.rs  predicate.rs  wal_record.rs
nodedb-columnar/src/compaction/: extract.rs  mod.rs  segment.rs  segments.rs  tests.rs
nodedb-columnar/src/memtable/: mod.rs
nodedb-columnar/src/memtable/column_data/: access.rs  backfill.rs  dict_encode.rs  mod.rs  mutation.rs  mutation_ingest.rs  push.rs  truncate.rs  types.rs
nodedb-columnar/src/mutation/: engine.rs  flush.rs  mod.rs  tests.rs  write.rs
nodedb-columnar/src/reader/: block_decode.rs  mod.rs  segment_reader.rs  types.rs
nodedb-columnar/src/writer/: block.rs  encode.rs  mod.rs  segment_writer.rs  stats.rs
nodedb-columnar/tests/: large_i64_pushdown.rs
nodedb-document/: Cargo.toml
nodedb-sql/: Cargo.toml
nodedb-sql/src/: aggregate_walk.rs  catalog.rs  coerce.rs  dsl_bind.rs  error.rs  fts_types.rs  lib.rs  params.rs  reserved.rs  temporal.rs  types_array.rs  types_expr.rs
nodedb-sql/src/ddl_ast/: alter_ops.rs  collection_type.rs  graph_types.rs  mod.rs  statement.rs
nodedb-sql/src/ddl_ast/graph_parse/: fusion_params.rs  helpers.rs  mod.rs  tokenizer.rs  variants.rs
nodedb-sql/src/ddl_ast/parse/: alert.rs  backup.rs  change_stream.rs  cluster_admin.rs  conflict_policy.rs  copy_from.rs  copy_to.rs  custom_type.rs  dispatch.rs  helpers.rs  index.rs  maintenance.rs  materialized_view.rs  mod.rs  retention.rs  rls.rs  schedule.rs  sequence.rs  synonym_group.rs  trigger.rs  user_auth.rs  vector_primary.rs
nodedb-sql/src/ddl_ast/parse/collection/: alter_ops.rs  column_list.rs  mod.rs  with_clause.rs
nodedb-sql/src/engine_rules/: array.rs  columnar.rs  document_schemaless.rs  document_strict.rs  kv.rs  mod.rs  spatial.rs  timeseries.rs
nodedb-sql/src/functions/: arg_types.rs  mod.rs  registry.rs
nodedb-sql/src/functions/builtins/: aggregates.rs  all.rs  helpers.rs  mod.rs  scalars.rs
nodedb-sql/src/functions/builtins/scalars/: array_fn.rs  datetime.rs  doc.rs  math.rs  misc.rs  ndarray.rs  pg_fts.rs  pg_json.rs  spatial.rs  string.rs  vector.rs
nodedb-sql/src/functions/fts_ops/: mod.rs  pg_fts_funcs.rs  tsquery_parser.rs
nodedb-sql/src/optimizer/: constant_fold.rs  mod.rs  point_get.rs  predicate_pushdown.rs
nodedb-sql/src/parser/: mod.rs  normalize.rs  object_literal.rs  statement.rs  type_expr.rs
nodedb-sql/src/parser/array_stmt/: ast.rs  lexer.rs  mod.rs  parse.rs  parse_impl.rs
nodedb-sql/src/parser/preprocess/: function_args.rs  lex.rs  literal.rs  mod.rs  object_literal_stmt.rs  pipeline.rs  search_vector.rs  temporal.rs  vector_ops.rs
nodedb-sql/src/planner/: aggregate.rs  array_ddl.rs  array_dml.rs  ast_helpers.rs  const_fold.rs  cte.rs  dml.rs  dml_helpers.rs  dml_update_delete.rs  grouping_sets.rs  merge.rs  mod.rs  sort.rs  subquery.rs  union.rs  window.rs
nodedb-sql/src/planner/array_fn/: helpers.rs  maint_fn.rs  mod.rs  table_fn.rs  tests.rs
nodedb-sql/src/planner/bitmap_emit/: hashjoin.rs  mod.rs  predicate.rs
nodedb-sql/src/planner/join/: array_arm.rs  constraint.rs  mod.rs  plan.rs
nodedb-sql/src/planner/lateral/: correlation.rs  mod.rs  plan.rs
nodedb-sql/src/planner/select/: entry.rs  entry_ann.rs  helpers.rs  mod.rs  select_stmt.rs  tests.rs  where_search.rs
nodedb-sql/src/planner/select/order_by/: aliases.rs  apply.rs  hybrid.rs  mod.rs  projection.rs  triggers.rs  vector_join.rs
nodedb-sql/src/resolver/: columns.rs  mod.rs
nodedb-sql/src/resolver/expr/: binary_ops.rs  convert.rs  functions.rs  mod.rs  tests.rs  value.rs
nodedb-sql/src/types/: collection.rs  filter.rs  mod.rs  plan.rs  query.rs
nodedb-sql/src/types/plan/: merge_types.rs  mod.rs  row_types.rs  variants.rs  vector_opts.rs
nodedb-sql/tests/: ddl_constraint_rejection.rs  schema_qualified_rejection.rs
nodedb-strict/: Cargo.toml
nodedb-strict/src/: arrow_extract.rs  decode.rs  encode.rs  error.rs  lib.rs
synapsedb-cluster/: Cargo.toml
synapsedb-cluster/src/: ghost.rs  migration.rs  multi_raft.rs  routing.rs  wire.rs
(+2989 files in other folders)
